--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.2",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/winston-loggly-bulk": "^3.0.3",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.22",
