--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -4,7 +4,7 @@ on:
   release:
     push:
       branches:
-        - "main"
+        - "master"
     # types: [published] # , created, edited
 
 jobs:
