--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -1,11 +1,7 @@
 name: Build and push Docker image upon release
-on:
-  # Build and push Docker images *only* for releases.
-  release:
-    push:
-      branches:
-        - "master"
-    # types: [published] # , created, edited
+on: push
+
+# types: [published] # , created, edited
 
 jobs:
   push_to_registry:
