--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -4,19 +4,34 @@ on: push
 # types: [published] # , created, edited
 
 jobs:
-  push_to_registry:
-    name: Build and push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+  # push_to_registry:
+  #   name: Build and push Docker image to Docker Hub
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v2
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1 # Info: https://github.com/docker/build-push-action/tree/releases/v1#tags
+  #     - name: Push to Docker Hub
+  #       uses: docker/build-push-action@v1 # Info: https://github.com/docker/build-push-action/tree/releases/v1#tags
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  #         repository: ${{ secrets.DOCKERHUB_REPOSITORY }}
+  #         tag_with_ref: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_ref
+  #         tag_with_sha: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_sha
+  #         tags: latest
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - actions/chockout@v2
+
+      - uses: alex-ac/github-action-ssh-docker-compose@master
+        name: Docker-Stack Remote Deployment
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ secrets.DOCKERHUB_REPOSITORY }}
-          tag_with_ref: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_ref
-          tag_with_sha: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_sha
-          tags: latest
+          ssh_host: ec2-54-226-180-50.compute-1.amazonaws.com
+          ssh_private_key: ${{ secrets.API_SSH_PRIVATE_KEY }}
+          ssh_user: ubuntu
+          docker_compose_prefix: hans-wehr
+          use_stack: "true"
