--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -47,14 +47,16 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-
-            #Now we have got the access of EC2 and we will start the deploy .
+            # comment
+            # Now we have got the access of EC2 and we will start the deploy
             cd /home/ubuntu/CounterApp &&
             git checkout master &&
             git fetch --all &&
             git reset --hard origin/master &&
             git pull origin master &&
             docker-compose build && docker-compose up -d
+
+            '
 
   # deploy:
   #   runs-on: ubuntu-latest
