--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -49,13 +49,12 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             # comment
             # Now we have got the access of EC2 and we will start the deploy
-            cd /home/ubuntu/CounterApp &&
+            cd /hans-wehr-backend &&
             git checkout master &&
             git fetch --all &&
             git reset --hard origin/master &&
             git pull origin master &&
             docker-compose build && docker-compose up -d
-
             '
 
   # deploy:
