--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc --project ./",
     "deploy": "node dist/app.js",
-    "deployHTTP": "cross-env HTTP=1 node dist/app.js",
+    "deployHTTP": "tsc --project ./ && cross-env HTTP=1 node dist/app.js",
     "start" : "cross-env LOCAL=1 node dist/app.js",
     "dev": "cross-env LOCAL=1 nodemon src/app.ts"
   },
