--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc --project ./",
     "deploy": "node dist/app.js",
     "deployHTTP": "tsc --project ./ && cross-env HTTP=1 node dist/app.js",
+    "deployHTTPS": "tsc --project ./ && node dist/app.js",
     "start" : "cross-env LOCAL=1 node dist/app.js",
     "dev": "cross-env LOCAL=1 nodemon src/app.ts"
   },
