--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -20,17 +20,17 @@ jobs:
   #         tag_with_ref: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_ref
   #         tag_with_sha: true # Info: https://github.com/docker/build-push-action/tree/releases/v1#tag_with_sha
   #         tags: latest
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Build the docker_compose
-        run: docker-compose build
+  #     - name: Build the docker_compose
+  #       run: docker-compose build
 
-    # - name: Build the application
-    #   run: docker-compose exec -T counter_app npm run build
+  # - name: Build the application
+  #   run: docker-compose exec -T counter_app npm run build
 
   deploy:
     runs-on: ubuntu-latest
