--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -55,8 +55,8 @@ jobs:
             git pull origin master &&
             echo "DB_USERNAME=${{ secrets.API_DB_USERNAME  }}" >> .env && 
             echo "DB_PASSWORD=${{ secrets.API_DB_PASSWORD  }}" >> .env &&
-            echo "HTTPS_KEY=${{ secrets.API_HTTPS_KEY  }}" >> privkey.pem &&
-            echo "HTTPS_CERT=${{ secrets.API_HTTPS_CERT  }}" >> fullchain.pem &&
+            echo "${{ secrets.API_HTTPS_KEY  }}" >> privkey.pem &&
+            echo "${{ secrets.API_HTTPS_CERT  }}" >> fullchain.pem &&
             docker-compose build && docker-compose up -d
             '
   # deploy:
