--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -54,7 +54,7 @@ jobs:
             git reset --hard origin/master &&
             git pull origin master &&
             echo "DB_USERNAME=${{ secrets.API_DB_USERNAME  }}" > .env && 
-            echo "DB_PASSWORD=${{ secrets.API_DB_PASSWORD  }}" > .env &&
+            echo "DB_PASSWORD=${{ secrets.API_DB_PASSWORD  }}" >> .env &&
             echo "${{ secrets.API_HTTPS_KEY  }}" > privkey.pem &&
             echo "${{ secrets.API_HTTPS_CERT  }}" > fullchain.pem &&
             docker-compose build && docker-compose up -d
