adding env variabels

--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -58,6 +58,7 @@ jobs:
             git pull origin master &&
             echo "DB_USERNAME=${{ secrets.API_DB_USERNAME  }}" > .env && 
             echo "DB_PASSWORD=${{ secrets.API_DB_PASSWORD  }}" >> .env &&
+            echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY  }}" >> .env &&
             echo "${{ secrets.API_HTTPS_KEY  }}" > privkey.pem &&
             echo "${{ secrets.API_HTTPS_CERT  }}" > fullchain.pem &&
             docker-compose build && docker-compose up -d
