added docker support

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "deployHTTPS": "tsc --project ./ && node dist/app.js",
     "start": "cross-env LOCAL=1 node dist/app.js",
     "dev": "cross-env LOCAL=1 LOCAL_DB=1 nodemon src/app.ts",
-    "dev_cloud_DB": "cross-env LOCAL=1 nodemon src/app.ts"
+    "dev_cloud_DB": "cross-env LOCAL=1 nodemon src/app.ts",
+    "buildDocker": "docker build -t hans-wehr-backend .",
+    "deployDocker": "docker-compose up",
+    "docker": "npm run buildDocker && npm run deployDocker"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.165.0",
