--- a/.github/workflows/build_push_docker.yml
+++ b/.github/workflows/build_push_docker.yml
@@ -51,6 +51,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             # comment
             # Now we have got the access of EC2 and we will start the deploy
+            docker stop $(docker ps -a -q) &&
+            docker system prune -a &&
+            sudo journalctl --vacuum-time=3d &&
             cd ~/hans-wehr-backend &&
             git checkout master &&
             git fetch --all &&
