--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3'
+version: "3"
 
 services:
-    api:
-        build: .
-        ports:
-          - 80:80
-          - 443:443
-        logging:
-            driver: none
+  api:
+    build: .
+    ports:
+      - 80:80
+      - 443:443
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m" # Limit each log file to 10MB
+        max-file: "1" # Keep a maximum of 3 log files
